added some new file

--- a/first_todo/HelloWorld.html
+++ b/first_todo/HelloWorld.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Hello World</title>
-    <script src="script/angular.min.js"></script>
+    <script src="../script/angular.min.js"></script>
 </head>
 <style>
     h1{
