--- a/first_todo/InputText.html
+++ b/first_todo/InputText.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Input Text</title>
-    <script src="script/angular.min.js"></script>
+    <script src="../script/angular.min.js"></script>
 
 </head>
 <style>
