--- a/testingFolder/testing_directive.html
+++ b/testingFolder/testing_directive.html
@@ -20,7 +20,7 @@
 <h1>{{Name}}</h1>
 
 <ul>
-    <li ng-repeat="item in items" ng-show="item.type">
+    <li ng-repeat="item in items" >
 
         {{item.type === 'm' ? "Ijlal":'Khanzada';}}
 
