--- a/18-10-2014/one.html
+++ b/18-10-2014/one.html
@@ -11,12 +11,12 @@
 <body class="well ng-scope" ng-controller="todo">
 <div id="border">
 <div class="dom">
-<label ng-repeat="lib in libs">
-    <input type="checkbox" ng-model="lib.checked">
-    {{lib.name}}
-</label>
+<!--<label ng-repeat="lib in libs">-->
+    <!--<input type="checkbox" ng-model="lib.checked">-->
+    <!--{{lib.name}}-->
+<!--</label>-->
     <ul class="libs">
-        <li ng-repeat="lib in libs" ng-show="lib.checked">
+        <li ng-repeat="lib in libs">
             <span><button type="button" ng-click="removeItem()">Delete</button> </span>
             {{lib.name}}
         </li>
