Sunday on broadcast

--- a/18-10-2014/task_for_One.html
+++ b/18-10-2014/task_for_One.html
@@ -14,7 +14,7 @@
     <div class="dom">
         <ul class="libs">
             <li ng-repeat="lib in libs">
-                <span><button type="button" ng-click="removeItem()">Delete</button> </span>
+                <span><button type="button" ng-click="removeItem()"><i class="trash icon"></i></button> </span>
                 {{lib.name}}
             </li>
         </ul>
