first commit after 3 year

--- a/18-10-2014/task_for_One.html
+++ b/18-10-2014/task_for_One.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="../script/angular.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/_bootstrap.scss">
-    <link rel="stylesheet" type="text/css" href="../css/semantic.css">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../lib/_bootstrap.scss">
+    <link rel="stylesheet" type="text/css" href="../lib/semantic.css">
+    <link rel="stylesheet" type="text/css" href="../lib/style.css">
 </head>
 <body>
 <body class="well ng-scope" ng-controller="todo">
