--- a/secendClass/directive.html
+++ b/secendClass/directive.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>directive ng-Repeat</title>
     <script src="../script/angular.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/_bootstrap.scss">
+    <link rel="stylesheet" type="text/css" href="../lib/_bootstrap.scss">
 </head>
 
 <body>
