--- a/sunday-19-10-2014/broadcast-emit-rootScope.html
+++ b/sunday-19-10-2014/broadcast-emit-rootScope.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>BroadCast</title>
     <script src="../script/angular.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/_bootstrap.scss">
-    <link rel="stylesheet" type="text/css" href="../css/semantic.css">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="../lib/_bootstrap.scss">
+    <link rel="stylesheet" type="text/css" href="../lib/semantic.css">
+    <link rel="stylesheet" type="text/css" href="../lib/style.css">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
