--- a/testingFolder/testing_directive.html
+++ b/testingFolder/testing_directive.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="../script/angular.min.js"></script>
-    <link rel="stylesheet" href="../css/_bootstrap.scss">
+    <link rel="stylesheet" href="../lib/_bootstrap.scss">
 </head>
 <style>
     ul li{
